# capable-cpp-template

./: .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md  doxy.cfg  format_fix.sh  version.h.in
.github/workflows/: codeChecks.yml  main.yml  multi-platform-build.yml  releaseDocs.yml
packaging/: ms.wxs
scripts/: README.MD  check_boilerplate.py  check_boilerplate.txt  check_merge_conflicts.py  check_suspect_words.py
src/: CMakeLists.txt  main.cpp  template_class.cpp  template_class.h
test/: CMakeLists.txt  static_analyzer_test.cpp  template_class_test.cpp
tests/: static_analyzer_test.cpp  template_class_test.cpp
tools/: README.MD  check_boilerplate.py  check_documentation_level.py  check_file_size.py  check_suspect_words.py  documentation_level_check.py  format_fix.sh  format_fix_cmake.sh
